
User interface
==============
- Highlight spell stat when choosing a character.
- Added x11-settings.prf support to main-x11.
- Show the effects of Clarity and Atheletics a bit better in character screen.
- Show the power of beguiling spells in spellbooks (slow, sleep,
confusion and fear), to encourage their use.
- Inscribe drops from uniques.
- Added monster list window.
- Removed Acorn port.
- Removed VM/ESA port.
- Removed Amiga port.
- Removed Linux SVGALib port.
- Removed OS/2 EMX port.
- Removed termcap port.
- Removed check_load & check_time code.
- Removed X11 Athena widgets port.
- Removed MS/DOS ports.
- Transparency is turned on permanently.
- Removed extra main-mac-carbon file.
- Added more basic colors, to get the same number a V.
- Only allow change of /lib/user with command-line option.
- Removed hilite_player option. (Always off)

Coding changes
==============
- Clean up X11 stuff on exit.
- Added missing depcomp.
- Removed files modified by autobuild system from repository.
- Fixed warning in acinclude.m4.
- Slight clean ups in birth.c.
- Slight clean ups in main-x11.c.
- Cleaned up and merged the h-xxx.h files into h-basic.h.
- Cleaned up terminal handling, use POSIX instead of old methods.
- Cleaned up z-form and z-util a bit. Core  function removed.
- Trimming down a number of compile-time options.
- Cleaned up setuid code a bit, started on z-file.
- Removed support for savefiles older than Angband 2.7.0.
- Clean ups in main-gcu.c.
- Removed unused Term_user.
- Started upgrading z-form to Vanilla standard.
- Clean ups in main-x11.c.
- Updated z-virt to Vanilla standard.
- Moved a lot of filehandling to z-file.
- Use z-quark package.
- Use z-msg package.
- check_modification_date now uses file_newer.
- Added ui-event header.
- Removed old sound interface. (A new one has not been added, since O
has no sound files.)
- Started cleanup of z-rand.
- Moved damroll to z-rand.
- Moved signals code to own file.
- Moved score code to own file.